syntaxique.output
Grammaire

    0 $accept: S $end

    1 S: bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    2  | bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    4  | bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    5 DECLARATION: bal_ouv DECLARATION_SIMPLE DECLARATION
    6            | bal_ouv mc_array mc_as TYPE bal_fer DECLARATION_TAB DECLARATION
    7            | bal_slch_ouv mc_sub mc_variable bal_fer

    8 $@1: /* vide */

    9 DECLARATION_CONST: bal_ouv mc_sub mc_constante bal_fer $@1 LISTE_DEC_CONST

   10 LISTE_DEC_CONST: bal_ouv DECLARATION_SIMPLE LISTE_DEC_CONST
   11                | bal_ouv DEC_CONST_EGAL LISTE_DEC_CONST
   12                | bal_slch_ouv mc_sub mc_constante bal_fer

   13 DEC_CONST_EGAL: idf egal SWITCH_CST_TYPES bal_slch_fer pvg

   14 SWITCH_CST_TYPES: SWITCH_INT
   15                 | cst_float
   16                 | cst_bool
   17                 | cst_char
   18                 | simple_string

   19 SWITCH_INT: par_ouv cst_int_pos par_fer
   20           | par_ouv cst_int_neg par_fer
   21           | cst_unsigned_int

   22 DECLARATION_SIMPLE: idf ou DECLARATION_SIMPLE
   23                   | idf mc_as TYPE bal_slch_fer pvg

   24 TYPE: mc_int
   25     | mc_float
   26     | mc_char
   27     | mc_string
   28     | mc_bool

   29 $@2: /* vide */

   30 DECLARATION_TAB: bal_ouv idf deuxpt cst_unsigned_int bal_slch_fer $@2 DECLARATION_TAB
   31                | bal_slch_ouv mc_array bal_fer

   32 BODY: AFFECTATION BODY
   33     | INPUT BODY

   34 $@3: /* vide */

   35 BODY: bal_ouv mc_output deuxpt OUTPUT $@3 BODY
   36     | INST_IF BODY
   37     | BOUCLE_DO BODY
   38     | BOUCLE_FOR BODY
   39     | bal_slch_ouv mc_body bal_fer

   40 AFFECTATION: bal_ouv mc_aff deuxpt idf vrg X bal_slch_fer
   41            | bal_ouv mc_aff deuxpt idf cr_ouv cst_unsigned_int cr_fer vrg X bal_slch_fer

   42 X: EXPRESSION_ARITH
   43  | EXPRESSION_COMPARAISON
   44  | EXPRESSION_LOGIQUE
   45  | simple_string
   46  | cst_char
   47  | cst_bool

   48 EXPRESSION_ARITH: par_ouv EXPRESSION_ARITH par_fer
   49                 | EXPRESSION_ARITH plus EXPRESSION_ARITH
   50                 | EXPRESSION_ARITH moins EXPRESSION_ARITH
   51                 | EXPRESSION_ARITH divis EXPRESSION_ARITH
   52                 | EXPRESSION_ARITH mult EXPRESSION_ARITH
   53                 | TERM

   54 TERM: par_ouv cst_int_neg par_fer
   55     | cst_unsigned_int
   56     | cst_float
   57     | idf
   58     | idf cr_ouv cst_unsigned_int cr_fer

   59 EXPRESSION_LOGIQUE: OpLog par_ouv EXPRESSIONS par_fer
   60                   | not par_ouv TYPE_EXP par_fer

   61 OpLog: and
   62      | or

   63 EXPRESSIONS: TYPE_EXP vrg EXPRESSIONS
   64            | TYPE_EXP vrg TYPE_EXP

   65 TYPE_EXP: EXPRESSION_LOGIQUE
   66         | EXPRESSION_COMPARAISON
   67         | cst_bool
   68         | idf
   69         | idf cr_ouv cst_unsigned_int cr_fer

   70 EXPRESSION_COMPARAISON: MC_COMPARAISON par_ouv EXPRESSION_ARITH vrg EXPRESSION_ARITH par_fer

   71 MC_COMPARAISON: sup
   72               | supeg
   73               | infeg
   74               | inf
   75               | ega
   76               | dif

   77 INPUT: bal_ouv mc_input deuxpt idf chaine_gauche SIGNE_FORMATAGE chaine_droite

   78 OUTPUT: chaine_gauche SIGNE_FORMATAGE chaine_outdr ID plus OUTPUT
   79       | simple_string plus OUTPUT
   80       | chaine_gauche SIGNE_FORMATAGE chaine_outdr ID bal_slch_fer
   81       | simple_string bal_slch_fer

   82 ID: idf
   83   | idf cr_ouv cst_unsigned_int cr_fer

   84 SIGNE_FORMATAGE: dollar
   85                | mod
   86                | hash
   87                | arob
   88                | etcom

   89 INSTRUCTION: AFFECTATION INSTRUCTION
   90            | INPUT INSTRUCTION

   91 $@4: /* vide */

   92 INSTRUCTION: bal_ouv mc_output deuxpt OUTPUT $@4 INSTRUCTION
   93            | /* vide */

   94 IF_A: bal_ouv mc_if deuxpt CONDITION

   95 IF_B: IF_A bal_fer bal_ouv mc_then bal_fer INSTRUCTION

   96 IF_C: IF_B bal_slch_ouv mc_then bal_fer INST_ELSE
   97     | IF_B bal_slch_ouv mc_then bal_fer

   98 INST_IF: IF_C bal_slch_ouv mc_if bal_fer

   99 CONDITION: EXPRESSION_LOGIQUE
  100          | EXPRESSION_COMPARAISON

  101 INST_ELSE: bal_ouv mc_else bal_fer INSTRUCTION_ELSE

  102 INSTRUCTION_ELSE: AFFECTATION INSTRUCTION_ELSE
  103                 | INPUT INSTRUCTION_ELSE

  104 $@5: /* vide */

  105 INSTRUCTION_ELSE: bal_ouv mc_output deuxpt OUTPUT $@5 INSTRUCTION_ELSE
  106                 | INST_IF INSTRUCTION_ELSE
  107                 | bal_slch_ouv mc_else bal_fer

  108 BOUCLE_DO_A: bal_ouv mc_do bal_fer

  109 BOUCLE_DO_B: BOUCLE_DO_A INSTRUCTION_BOUCLE_DO

  110 BOUCLE_DO_C: BOUCLE_DO_B CONDITION

  111 BOUCLE_DO: BOUCLE_DO_C bal_slch_fer bal_slch_ouv mc_do bal_fer

  112 INSTRUCTION_BOUCLE_DO: AFFECTATION INSTRUCTION_BOUCLE_DO
  113                      | INPUT INSTRUCTION_BOUCLE_DO

  114 $@6: /* vide */

  115 INSTRUCTION_BOUCLE_DO: bal_ouv mc_output deuxpt OUTPUT $@6 INSTRUCTION_BOUCLE_DO
  116                      | INST_IF INSTRUCTION_BOUCLE_DO
  117                      | BOUCLE_DO INSTRUCTION_BOUCLE_DO
  118                      | BOUCLE_FOR INSTRUCTION_BOUCLE_DO
  119                      | bal_ouv mc_while deuxpt

  120 BOUCLE_FOR_A: bal_ouv mc_for idf egal SWITCH_INT

  121 BOUCLE_FOR_B: BOUCLE_FOR_A mc_until SWITCHID_INT

  122 BOUCLE_FOR: BOUCLE_FOR_B bal_fer INSTRUCTION_BOUCLE_FOR

  123 SWITCHID_INT: idf
  124             | SWITCH_INT

  125 INSTRUCTION_BOUCLE_FOR: AFFECTATION INSTRUCTION_BOUCLE_FOR
  126                       | INPUT INSTRUCTION_BOUCLE_FOR

  127 $@7: /* vide */

  128 INSTRUCTION_BOUCLE_FOR: bal_ouv mc_output deuxpt OUTPUT $@7 INSTRUCTION_BOUCLE_FOR
  129                       | INST_IF INSTRUCTION_BOUCLE_FOR
  130                       | BOUCLE_DO INSTRUCTION_BOUCLE_FOR
  131                       | BOUCLE_FOR INSTRUCTION_BOUCLE_FOR
  132                       | bal_slch_ouv mc_for bal_fer


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
mc_exl (258) 1 2 3 4
mc_docprogram (259) 1 2 3 4
mc_sub (260) 1 2 3 7 9 12
mc_variable (261) 1 2 3 7
mc_body (262) 1 2 3 4 39
bal_ouv (263) 1 2 3 4 5 6 9 10 11 30 35 40 41 77 92 94 95 101 105 108
    115 119 120 128
bal_fer (264) 1 2 3 4 6 7 9 12 31 39 95 96 97 98 101 107 108 111 122
    132
bal_slch_fer (265) 13 23 30 40 41 80 81 111
bal_slch_ouv (266) 1 2 3 4 7 12 31 39 96 97 98 107 111 132
idf (267) 1 2 3 4 13 22 23 30 40 41 57 58 68 69 77 82 83 120 123
mc_as (268) 6 23
pvg (269) 13 23
ou (270) 22
mc_array (271) 6 31
deuxpt (272) 30 35 40 41 77 92 94 105 115 119 128
mc_constante (273) 9 12
egal (274) 13 120
par_ouv (275) 19 20 48 54 59 60 70
par_fer (276) 19 20 48 54 59 60 70
cr_ouv (277) 41 58 69 83
cr_fer (278) 41 58 69 83
cst_unsigned_int (279) 21 30 41 55 58 69 83
cst_int_pos (280) 19
cst_int_neg (281) 20 54
cst_float (282) 15 56
cst_bool (283) 16 47 67
cst_char (284) 17 46
plus (285) 49 78 79
moins (286) 50
mult (287) 52
divis (288) 51
and (289) 61
or (290) 62
not (291) 60
sup (292) 71
inf (293) 74
supeg (294) 72
infeg (295) 73
ega (296) 75
dif (297) 76
mc_int (298) 24
mc_float (299) 25
mc_char (300) 26
mc_string (301) 27
mc_bool (302) 28
mc_aff (303) 40 41
vrg (304) 40 41 63 64 70
mc_input (305) 77
mc_output (306) 35 92 105 115 128
dollar (307) 84
mod (308) 85
hash (309) 86
arob (310) 87
etcom (311) 88
chaine_gauche (312) 77 78 80
chaine_droite (313) 77
chaine_outdr (314) 78 80
simple_string (315) 18 45 79 81
mc_if (316) 94 98
mc_then (317) 95 96 97
mc_else (318) 101 107
mc_do (319) 108 111
mc_while (320) 119
mc_for (321) 120 132
mc_until (322) 121


Non-terminaux, suivis des règles où ils apparaissent

$accept (68)
    à gauche: 0
S (69)
    à gauche: 1 2 3 4, à droite: 0
DECLARATION (70)
    à gauche: 5 6 7, à droite: 1 2 3 5 6
DECLARATION_CONST (71)
    à gauche: 9, à droite: 1 2 4
$@1 (72)
    à gauche: 8, à droite: 9
LISTE_DEC_CONST (73)
    à gauche: 10 11 12, à droite: 9 10 11
DEC_CONST_EGAL (74)
    à gauche: 13, à droite: 11
SWITCH_CST_TYPES (75)
    à gauche: 14 15 16 17 18, à droite: 13
SWITCH_INT (76)
    à gauche: 19 20 21, à droite: 14 120 124
DECLARATION_SIMPLE (77)
    à gauche: 22 23, à droite: 5 10 22
TYPE (78)
    à gauche: 24 25 26 27 28, à droite: 6 23
DECLARATION_TAB (79)
    à gauche: 30 31, à droite: 6 30
$@2 (80)
    à gauche: 29, à droite: 30
BODY (81)
    à gauche: 32 33 35 36 37 38 39, à droite: 1 2 3 4 32 33 35 36 37
    38
$@3 (82)
    à gauche: 34, à droite: 35
AFFECTATION (83)
    à gauche: 40 41, à droite: 32 89 102 112 125
X (84)
    à gauche: 42 43 44 45 46 47, à droite: 40 41
EXPRESSION_ARITH (85)
    à gauche: 48 49 50 51 52 53, à droite: 42 48 49 50 51 52 70
TERM (86)
    à gauche: 54 55 56 57 58, à droite: 53
EXPRESSION_LOGIQUE (87)
    à gauche: 59 60, à droite: 44 65 99
OpLog (88)
    à gauche: 61 62, à droite: 59
EXPRESSIONS (89)
    à gauche: 63 64, à droite: 59 63
TYPE_EXP (90)
    à gauche: 65 66 67 68 69, à droite: 60 63 64
EXPRESSION_COMPARAISON (91)
    à gauche: 70, à droite: 43 66 100
MC_COMPARAISON (92)
    à gauche: 71 72 73 74 75 76, à droite: 70
INPUT (93)
    à gauche: 77, à droite: 33 90 103 113 126
OUTPUT (94)
    à gauche: 78 79 80 81, à droite: 35 78 79 92 105 115 128
ID (95)
    à gauche: 82 83, à droite: 78 80
SIGNE_FORMATAGE (96)
    à gauche: 84 85 86 87 88, à droite: 77 78 80
INSTRUCTION (97)
    à gauche: 89 90 92 93, à droite: 89 90 92 95
$@4 (98)
    à gauche: 91, à droite: 92
IF_A (99)
    à gauche: 94, à droite: 95
IF_B (100)
    à gauche: 95, à droite: 96 97
IF_C (101)
    à gauche: 96 97, à droite: 98
INST_IF (102)
    à gauche: 98, à droite: 36 106 116 129
CONDITION (103)
    à gauche: 99 100, à droite: 94 110
INST_ELSE (104)
    à gauche: 101, à droite: 96
INSTRUCTION_ELSE (105)
    à gauche: 102 103 105 106 107, à droite: 101 102 103 105 106
$@5 (106)
    à gauche: 104, à droite: 105
BOUCLE_DO_A (107)
    à gauche: 108, à droite: 109
BOUCLE_DO_B (108)
    à gauche: 109, à droite: 110
BOUCLE_DO_C (109)
    à gauche: 110, à droite: 111
BOUCLE_DO (110)
    à gauche: 111, à droite: 37 117 130
INSTRUCTION_BOUCLE_DO (111)
    à gauche: 112 113 115 116 117 118 119, à droite: 109 112 113 115
    116 117 118
$@6 (112)
    à gauche: 114, à droite: 115
BOUCLE_FOR_A (113)
    à gauche: 120, à droite: 121
BOUCLE_FOR_B (114)
    à gauche: 121, à droite: 122
BOUCLE_FOR (115)
    à gauche: 122, à droite: 38 118 131
SWITCHID_INT (116)
    à gauche: 123 124, à droite: 121
INSTRUCTION_BOUCLE_FOR (117)
    à gauche: 125 126 128 129 130 131 132, à droite: 122 125 126 128
    129 130 131
$@7 (118)
    à gauche: 127, à droite: 128


état 0

    0 $accept: . S $end

    bal_ouv  décalage et aller à l'état 1

    S  aller à l'état 2


état 1

    1 S: bal_ouv . mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    2  | bal_ouv . mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv . mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    4  | bal_ouv . mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    mc_exl  décalage et aller à l'état 3


état 2

    0 $accept: S . $end

    $end  décalage et aller à l'état 4


état 3

    1 S: bal_ouv mc_exl . mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    2  | bal_ouv mc_exl . mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl . mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    4  | bal_ouv mc_exl . mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    mc_docprogram  décalage et aller à l'état 5


état 4

    0 $accept: S $end .

    $défaut  accepter


état 5

    1 S: bal_ouv mc_exl mc_docprogram . idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    2  | bal_ouv mc_exl mc_docprogram . idf bal_fer DECLARATION_CONST bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram . idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    4  | bal_ouv mc_exl mc_docprogram . idf bal_fer DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    idf  décalage et aller à l'état 6


état 6

    1 S: bal_ouv mc_exl mc_docprogram idf . bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    2  | bal_ouv mc_exl mc_docprogram idf . bal_fer DECLARATION_CONST bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram idf . bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    4  | bal_ouv mc_exl mc_docprogram idf . bal_fer DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_fer  décalage et aller à l'état 7


état 7

    1 S: bal_ouv mc_exl mc_docprogram idf bal_fer . bal_ouv mc_sub mc_variable bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    2  | bal_ouv mc_exl mc_docprogram idf bal_fer . DECLARATION_CONST bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram idf bal_fer . bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    4  | bal_ouv mc_exl mc_docprogram idf bal_fer . DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_ouv  décalage et aller à l'état 8

    DECLARATION_CONST  aller à l'état 9


état 8

    1 S: bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv . mc_sub mc_variable bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv . mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    9 DECLARATION_CONST: bal_ouv . mc_sub mc_constante bal_fer $@1 LISTE_DEC_CONST

    mc_sub  décalage et aller à l'état 10


état 9

    2 S: bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST . bal_ouv mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    4  | bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST . bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_ouv  décalage et aller à l'état 11


état 10

    1 S: bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub . mc_variable bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub . mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    9 DECLARATION_CONST: bal_ouv mc_sub . mc_constante bal_fer $@1 LISTE_DEC_CONST

    mc_variable   décalage et aller à l'état 12
    mc_constante  décalage et aller à l'état 13


état 11

    2 S: bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv . mc_sub mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    4  | bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv . mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    mc_sub   décalage et aller à l'état 14
    mc_body  décalage et aller à l'état 15


état 12

    1 S: bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable . bal_fer DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable . bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_fer  décalage et aller à l'état 16


état 13

    9 DECLARATION_CONST: bal_ouv mc_sub mc_constante . bal_fer $@1 LISTE_DEC_CONST

    bal_fer  décalage et aller à l'état 17


état 14

    2 S: bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_sub . mc_variable bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    mc_variable  décalage et aller à l'état 18


état 15

    4 S: bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_body . bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_fer  décalage et aller à l'état 19


état 16

    1 S: bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer . DECLARATION DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer . DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_ouv       décalage et aller à l'état 20
    bal_slch_ouv  décalage et aller à l'état 21

    DECLARATION  aller à l'état 22


état 17

    9 DECLARATION_CONST: bal_ouv mc_sub mc_constante bal_fer . $@1 LISTE_DEC_CONST

    $défaut  réduction par utilisation de la règle 8 ($@1)

    $@1  aller à l'état 23


état 18

    2 S: bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_sub mc_variable . bal_fer DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_fer  décalage et aller à l'état 24


état 19

    4 S: bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_body bal_fer . BODY bal_slch_ouv mc_docprogram bal_fer

    bal_ouv       décalage et aller à l'état 25
    bal_slch_ouv  décalage et aller à l'état 26

    BODY          aller à l'état 27
    AFFECTATION   aller à l'état 28
    INPUT         aller à l'état 29
    IF_A          aller à l'état 30
    IF_B          aller à l'état 31
    IF_C          aller à l'état 32
    INST_IF       aller à l'état 33
    BOUCLE_DO_A   aller à l'état 34
    BOUCLE_DO_B   aller à l'état 35
    BOUCLE_DO_C   aller à l'état 36
    BOUCLE_DO     aller à l'état 37
    BOUCLE_FOR_A  aller à l'état 38
    BOUCLE_FOR_B  aller à l'état 39
    BOUCLE_FOR    aller à l'état 40


état 20

    5 DECLARATION: bal_ouv . DECLARATION_SIMPLE DECLARATION
    6            | bal_ouv . mc_array mc_as TYPE bal_fer DECLARATION_TAB DECLARATION

    idf       décalage et aller à l'état 41
    mc_array  décalage et aller à l'état 42

    DECLARATION_SIMPLE  aller à l'état 43


état 21

    7 DECLARATION: bal_slch_ouv . mc_sub mc_variable bal_fer

    mc_sub  décalage et aller à l'état 44


état 22

    1 S: bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION . DECLARATION_CONST bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer
    3  | bal_ouv mc_exl mc_docprogram idf bal_fer bal_ouv mc_sub mc_variable bal_fer DECLARATION . bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_ouv  décalage et aller à l'état 45

    DECLARATION_CONST  aller à l'état 46


état 23

    9 DECLARATION_CONST: bal_ouv mc_sub mc_constante bal_fer $@1 . LISTE_DEC_CONST

    bal_ouv       décalage et aller à l'état 47
    bal_slch_ouv  décalage et aller à l'état 48

    LISTE_DEC_CONST  aller à l'état 49


état 24

    2 S: bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_sub mc_variable bal_fer . DECLARATION bal_ouv mc_body bal_fer BODY bal_slch_ouv mc_docprogram bal_fer

    bal_ouv       décalage et aller à l'état 20
    bal_slch_ouv  décalage et aller à l'état 21

    DECLARATION  aller à l'état 50


état 25

   35 BODY: bal_ouv . mc_output deuxpt OUTPUT $@3 BODY
   40 AFFECTATION: bal_ouv . mc_aff deuxpt idf vrg X bal_slch_fer
   41            | bal_ouv . mc_aff deuxpt idf cr_ouv cst_unsigned_int cr_fer vrg X bal_slch_fer
   77 INPUT: bal_ouv . mc_input deuxpt idf chaine_gauche SIGNE_FORMATAGE chaine_droite
   94 IF_A: bal_ouv . mc_if deuxpt CONDITION
  108 BOUCLE_DO_A: bal_ouv . mc_do bal_fer
  120 BOUCLE_FOR_A: bal_ouv . mc_for idf egal SWITCH_INT

    mc_aff     décalage et aller à l'état 51
    mc_input   décalage et aller à l'état 52
    mc_output  décalage et aller à l'état 53
    mc_if      décalage et aller à l'état 54
    mc_do      décalage et aller à l'état 55
    mc_for     décalage et aller à l'état 56


état 26

   39 BODY: bal_slch_ouv . mc_body bal_fer

    mc_body  décalage et aller à l'état 57


état 27

    4 S: bal_ouv mc_exl mc_docprogram idf bal_fer DECLARATION_CONST bal_ouv mc_body bal_fer BODY . bal_slch_ouv mc_docprogram bal_fer

    bal_slch_ouv  décalage et aller à l'état 58


état 28

   32 BODY: AFFECTATION . BODY

    bal_ouv       décalage et aller à l'état 25
    bal_slch_ouv  décalage et aller à l'état 26

    BODY          aller à l'état 59
    AFFECTATION   aller à l'état 28
    INPUT         aller à l'état 29
    IF_A          aller à l'état 30
    IF_B          aller à l'état 31
    IF_C          aller à l'état 32
    INST_IF       aller à l'état 33
    BOUCLE_DO_A   aller à l'état 34
    BOUCLE_DO_B   aller à l'état 35
    BOUCLE_DO_C   aller à l'état 36
    BOUCLE_DO     aller à l'état 37
    BOUCLE_FOR_A  aller à l'état 38
    BOUCLE_FOR_B  aller à l'état 39
    BOUCLE_FOR    aller à l'état 40


état 29

   33 BODY: INPUT . BODY

    bal_ouv       décalage et aller à l'état 25
    bal_slch_ouv  décalage et aller à l'état 26

    BODY          aller à l'état 60
    AFFECTATION   aller à l'état 28
    INPUT         aller à l'état 29
    IF_A          aller à l'état 30
    IF_B          aller à l'état 31
    IF_C          aller à l'état 32
    INST_IF       aller à l'état 33
    BOUCLE_DO_A   aller à l'état 34
    BOUCLE_DO_B   aller à l'état 35
    BOUCLE_DO_C   aller à l'état 36
    BOUCLE_DO     aller à l'état 37
    BOUCLE_FOR_A  aller à l'état 38
    BOUCLE_FOR_B  aller à l'état 39
    BOUCLE_FOR    aller à l'état 40


état 30

   95 IF_B: IF_A . bal_fer bal_ouv mc_then bal_fer INSTRUCTION

    bal_fer  décalage et aller à l'état 61


état 31

   96 IF_C: IF_B . bal_slch_ouv mc_then bal_fer INST_ELSE
   97     | IF_B . bal_slch_ouv mc_then bal_fer

    bal_slch_ouv  décalage et aller à l'état 62


état 32

   98 INST_IF: IF_C . bal_slch_ouv mc_if bal_fer

    bal_slch_ouv  décalage et aller à l'état 63


état 33

   36 BODY: INST_IF . BODY

    bal_ouv       décalage et aller à l'état 25
    bal_slch_ouv  décalage et aller à l'état 26

    BODY          aller à l'état 64
    AFFECTATION   aller à l'état 28
    INPUT         aller à l'état 29
    IF_A          aller à l'état 30
    IF_B          aller à l'état 31
    IF_C          aller à l'état 32
    INST_IF       aller à l'état 33
    BOUCLE_DO_A   aller à l'état 34
    BOUCLE_DO_B   aller à l'état 35
    BOUCLE_DO_C   aller à l'état 36
    BOUCLE_DO     aller à l'état 37
    BOUCLE_FOR_A  aller à l'état 38
    BOUCLE_FOR_B  aller à l'état 39
    BOUCLE_FOR    aller à l'état 40


état 34

  109 BOUCLE_DO_B: BOUCLE_DO_A . INSTRUCTION_BOUCLE_DO

    bal_ouv  décalage et aller à l'état 65

    AFFECTATION            aller à l'état 66
    INPUT                  aller à l'état 67
    IF_A                   aller à l'état 30
    IF_B                   aller à l'état 31
    IF_C                   aller à l'état 32
    INST_IF                aller à l'état 68
    BOUCLE_DO_A            aller à l'état 34
    BOUCLE_DO_B            aller à l'état 35
    BOUCLE_DO_C            aller à l'état 36
    BOUCLE_DO              aller à l'état 69
    INSTRUCTION_BOUCLE_DO  aller à l'état 70
    BOUCLE_FOR_A           aller à l'état 38
    BOUCLE_FOR_B           aller à l'état 39
    BOUCLE_FOR             aller à l'état 71


état 35

  110 BOUCLE_DO_C: BOUCLE_DO_B . CONDITION

    and    décalage et aller à l'état 72
    or     décalage et aller à l'état 73
    not    décalage et aller à l'état 74
    sup    décalage et aller à l'état 75
    inf    décalage et aller à l'état 76
    supeg  décalage et aller à l'état 77
    infeg  décalage et aller à l'état 78
    ega    décalage et aller à l'état 79
    dif    décalage et aller à l'état 80

    EXPRESSION_LOGIQUE      aller à l'état 81
    OpLog                   aller à l'état 82
    EXPRESSION_COMPARAISON  aller à l'état 83
    MC_COMPARAISON          aller à l'état 84
    CONDITION               aller à l'état 85


état 36

  111 BOUCLE_DO: BOUCLE_DO_C . bal_slch_fer bal_slch_ouv mc_do bal_fer

    bal_slch_fer  décalage et aller à l'état 86


état 37

   37 BODY: BOUCLE_DO . BODY

    bal_ouv       décalage et aller à l'état 25
    bal_slch_ouv  décalage et aller à l'état 26
